--- a/thesis/paper/sections/3_solution.tex
+++ b/thesis/paper/sections/3_solution.tex
@@ -363,7 +363,7 @@ router.get('/signup', async (req, res, next) => {
 
 \subsection{State Management}
 
-Intertext clients offer basic state management, making it possible to serve stateful Intertext applications using serverless/stateless backends. Front-end state can be fully driven from the backend via IUIDL. Intertext client offers two types of storage, persisted and volatile. 
+Intertext clients offer basic state management, making it possible to serve stateful Intertext applications using serverless/stateless backends. front-end state can be fully driven from the backend via IUIDL. Intertext client offers two types of storage, persisted and volatile. 
 
 Volatile storage is kept in the memory and it is persisted across the session. The purpose of this storage is to keep temporary values, such as users' progress in a long form distributed across multiple pages. Intertext clients passes the entire application state on the volatile storage to the backend on every request, allowing backend to build logic around the current state of the front-end application, and serve the UI accordingly. Figure \ref{fig:state_signup_progress_js} and Figure \ref{fig:state_signup_progress_xml} show this through an hypothetical sign up form with steps distributed across multiple steps. Figure \ref{fig:state_signup_progress_js}, we see the pseudo-code implementation of the stateless backend for this scenario. It can be seen that the current step user is at, and the input state data collected thus far is kept in the volatile state on the front-end. The state gets passed on to the backend on every request made to the \texttt{/signup} endpoint. We retrieve the current step, and serve different responses accordingly. If user completed the last step, then we execute our application logic (which in this case is signing user up), and render the result page. Otherwise, we increment the current step, combine the form data collected thus far, and render the form template with these. On the form template in Figure \ref{fig:state_signup_progress_xml}, we use the \texttt{<state>} block to instruct the Intertext client to record these new set of data to the front-end, so it could be passed on to the backend on the next request. Moreover, we render the correct form UI based on the step user is currently at.
 
