--- a/thesis/paper/sections/6_discussion.tex
+++ b/thesis/paper/sections/6_discussion.tex
@@ -68,7 +68,7 @@ Intertext platform comes with some limitations arises from its nature. While the
 
 \begin{enumerate}
 
-    \item \textbf{Complex Front-end Features}: Intertext applications can only transfer IUIDL to Intertext clients, and feature-wise, they are limited with what Intertext clients and IUIDL offer can offer. Therefor, it is not possible to build custom/complex feature-rich front-end applications.
+    \item \textbf{Complex front-end Features}: Intertext applications can only transfer IUIDL to Intertext clients, and feature-wise, they are limited with what Intertext clients and IUIDL offer can offer. Therefor, it is not possible to build custom/complex feature-rich front-end applications.
 
     \item \textbf{Offline Support}: Intertext clients are like web browsers, they make a request to an endpoint, and render the IUIDL code they receive. As a result, Intertext does not offer offline support out of the box. However, it is possible to work around this by creating a locally running IUIDL server that serves the application through a local endpoint, and pointing the Intertext client to it.
     
