--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{xurl}
 \usepackage{pgf-pie} 
 \usepackage{CJKutf8}
+\usepackage{hyphenat}
 
 \input{thesis/paper/utils/json-lang}
 \input{thesis/paper/utils/xml-lang}
@@ -32,6 +33,7 @@
           
 \begin{document}
 
+\hyphenation{Intertext}
 
 % ---------------- THESIS CONTENT ----------------
 
